Made some styling to burger menu button and made it change color like other items in top navbar

--- a/5_week/javascript_demo/styles.css
+++ b/5_week/javascript_demo/styles.css
@@ -103,6 +103,9 @@ footer {
 @media (max-width: 576px) {
   #mobileButton {
     display: block;
+    background-color: transparent;
+    border: none;
+    color: white;
   }
 
   nav ul {
