--- a/6_week/grid/style.css
+++ b/6_week/grid/style.css
@@ -6,24 +6,87 @@
 }
 
 body {
-  background-color: beige;
+  background-color: rgb(87, 202, 255);
 }
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 100px 200px 50px;
   gap: 1rem 2rem;
+  background-color: rgb(150, 150, 150);
   /* row-gap: 1rem;
   column-gap: 2; */
 }
 
 .item {
   background-color: gainsboro;
-  height: 200px;
+  border-radius: 5px;
+}
+
+.item:first-child {
+  grid-column: 1/3;
+  grid-row: 1/3;
+  background-color: red;
+}
+
+.item:last-child {
+  grid-column: 1/4;
+  background-color: yellow;
+}
+
+/* ---- SECOND GRID ---- */
+
+.areas-container {
+  display: grid;
+  grid-template-areas:
+    "header header header aside"
+    "left-top main main aside"
+    "left-bottom main main aside"
+    "left-bottom main main aside"
+    "footer footer footer footer";
+  grid-auto-rows: 5rem;
+  gap: 1rem;
+}
+
+.cell {
+  background-color: aqua;
+  border-radius: 10px;
+  padding: 0.25rem 0.25rem;
+}
+
+.header {
+  grid-area: header;
+  background-color: green;
+}
+
+.aside {
+  grid-area: aside;
+  background-color: yellow;
+}
+
+.left-top {
+  grid-area: left-top;
+  background-color: blue;
+}
+
+.left-bottom {
+  grid-area: left-bottom;
+  background-color: rgb(0, 255, 64);
+}
+
+.main {
+  grid-area: main;
+  background-color: rgb(255, 0, 242);
+}
+
+.footer {
+  grid-area: footer;
+  background-color: rgb(255, 0, 0);
 }
 
 @media screen and (max-width: 500px) {
   .grid-container {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
   }
 }
