some more testing with css transitions and grid

--- a/7_week/practice/style.css
+++ b/7_week/practice/style.css
@@ -13,12 +13,13 @@ body {
 
 h1 {
   font-size: 3rem;
+  text-shadow: 5px 5px 5px green;
 }
 
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 .card {
@@ -28,4 +29,30 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 0 0 #333;
+  transition-property: all;
+  transition-duration: 500ms;
+}
+
+.card:hover {
+  box-shadow: 0 0 10px #333;
+  background-color: green;
+}
+
+.card img {
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+  filter: grayscale(85%);
+  object-fit: cover;
+  object-position: top;
+}
+
+.card img:hover {
+  filter: grayscale(0%);
+}
+
+.frog {
+  grid-column: 1/3;
+  grid-row: 1/3;
 }
