--- a/7_week/practice/style.css
+++ b/7_week/practice/style.css
@@ -17,6 +17,64 @@ h1 {
   text-shadow: 5px 5px 5px green;
 }
 
+.box {
+  height: 200px;
+  width: 150px;
+  background: var(--primary-color);
+  color: black;
+  padding: 1rem;
+  animation-name: myAnimation;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  position: relative;
+  z-index: 1;
+}
+
+/* @keyframes myAnimation {
+  from {
+    background-color: green;
+    left: 0;
+  }
+  to {
+    background-color: blue;
+    left: 50%;
+  }
+} */
+
+@keyframes myAnimation {
+  0% {
+    top: 0;
+    left: 0;
+  }
+  25% {
+    top: 0;
+    left: 300px;
+  }
+  50% {
+    top: 300px;
+    left: 300px;
+  }
+  75% {
+    top: 300px;
+    left: 0;
+  }
+  100% {
+    top: 0px;
+    left: 0;
+  }
+}
+
+.box:hover {
+  animation-play-state: paused;
+}
+
+/* .box:hover {
+  transform: scale(110%);
+  transform: skew(-25deg, -25deg);
+  transform: translate(50%, 50%);
+  transform: perspective(400px) rotateY(45deg);
+} */
+
 .grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -32,13 +90,14 @@ h1 {
   justify-content: center;
   align-items: center;
   box-shadow: 0 0 0 #333;
-  transition-property: all;
-  transition-duration: 500ms;
+  transition: all 500ms;
 }
 
 .card:hover {
   box-shadow: 0 0 10px #333;
   background-color: green;
+  transform: scale(110%);
+  z-index: 1;
 }
 
 .card img {
